datasets/dataset_txt/certbot/certbot_3034.txt
xanni commented on 6 Nov 2015
Debian Squeeze, Python 2.6.6-8
$ VERBOSE=1 ./letsencrypt-auto --help
[...]
Collecting letsencrypt
  Using cached letsencrypt-0.0.0.dev20151104-py2-none-any.whl
Collecting letsencrypt-apache
  Using cached letsencrypt_apache-0.0.0.dev20151104-py2-none-any.whl
Collecting zope.interface (from letsencrypt)
  Using cached zope.interface-4.1.3.tar.gz
Requirement already up-to-date: setuptools in /home/xanni/.local/share/letsencrypt/lib/python2.6/site-packages (from letsencrypt)
Collecting python2-pythondialog>=3.2.2rc1 (from letsencrypt)
  Using cached python2-pythondialog-3.3.0.tar.bz2
Collecting PyOpenSSL (from letsencrypt)
  Using cached pyOpenSSL-0.15.1-py2.py3-none-any.whl
Collecting requests (from letsencrypt)
  Using cached requests-2.8.1-py2.py3-none-any.whl
Collecting ConfigArgParse (from letsencrypt)
  Using cached ConfigArgParse-0.9.3.tar.gz
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):
      File "<string>", line 20, in <module>
      File "/tmp/pip-build-mtd8A5/ConfigArgParse/setup.py", line 1, in <module>
        import configargparse
      File "configargparse.py", line 16
        ACTION_TYPES_THAT_DONT_NEED_A_VALUE = {argparse._StoreTrueAction,
                                                                        ^
    SyntaxError: invalid syntax

    ----------------------------------------
Command "python setup.py egg_info" failed with error code 1 in /tmp/pip-build-mtd8A5/ConfigArgParse